[package]
name = "structurs"
version = "0.1.0"
authors = ["Alec Keen <aleckeen@tutanota.com>"]
edition = "2018"

[dependencies]
structurs-derive = { path = "structurs-derive" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[[test]]
name = "tests"
path = "tests/progress.rs"
